CSS and JS goodies

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,9 +6,29 @@
     <meta charset="UTF-8">
     <title>F1</title>
     <style>
-        form {
+        table{
+            margin: auto;
             text-align: center;
             line-height: 2.0;
+            border-collapse: collapse;
+            width: 35%;
+        }
+
+        table tr {
+            transition: all .2s ease-in-out;
+            border-bottom: 2px solid #FF1801;
+        }
+
+        table tr:hover {
+            background-color: lightgray;
+        }
+
+        table tr td {
+            padding: 6px;
+        }
+
+        .td_text {
+            transition: all .4s ease-in-out;
         }
 
         label {
@@ -19,32 +39,44 @@
             padding-top: 20px;
         }
     </style>
+    <script>
+        function onLoad()
+        {
+            let td = document.getElementsByClassName("td_text")[0];
+            td.style.fontSize = "120%";
+            td.style.fontWeight = "bold";
+        }
+
+        function onClick(num)
+        {
+            let radio_btns = document.getElementsByClassName("radio_btn");
+            let tds = document.getElementsByClassName("td_text");
+            radio_btns[num].click();
+            tds[num].style.fontSize = "120%";
+            tds[num].style.fontWeight = "bold";
+            for (let i = 0; i < 6; ++i)
+                if (i !== num)
+                {
+                    tds[i].style.fontSize = "100%";
+                    tds[i].style.fontWeight = "normal";
+                }
+        }
+    </script>
 </head>
-<body>
+<body onload="onLoad();">
     <div class="main">
         <div class="form_title">Táblák</div>
         <form method="post" action="query.php">
-            <label>
-                Csapat <input type="radio" name="table" value="csapat" checked><br>
-            </label>
-            <label>
-                Nagydíj <input type="radio" name="table" value="nagydij"><br>
-            </label>
-            <label>
-                Pálya <input type="radio" name="table" value="palya"><br>
-            </label>
-            <label>
-                Részt vesz <input type="radio" name="table" value="resztvesz"><br>
-            </label>
-            <label>
-                Sofőr <input type="radio" name="table" value="sofor"><br>
-            </label>
-            <label>
-                Sofőr Bajnokság <input type="radio" name="table" value="soforbajnoksag"><br>
-            </label>
-            <label>
-                Versenyez <input type="radio" name="table" value="versenyez"><br>
-            </label>
+            <table>
+                <tbody>
+                    <tr onclick="onClick(0);"><td class="td_text">Csapat</td><td><label><input type="radio" name="table" value="csapat" checked class="radio_btn"></label></td></tr>
+                    <tr onclick="onClick(1);"><td class="td_text">Pálya</td><td><label><input type="radio" name="table" value="nagydij" class="radio_btn"></label></td></tr>
+                    <tr onclick="onClick(2);"><td class="td_text">Részt vesz</td><td><label><input type="radio" name="table" value="resztvesz" class="radio_btn"></label></td></tr>
+                    <tr onclick="onClick(3);"><td class="td_text">Sofőr</td><td><label><input type="radio" name="table" value="sofor" class="radio_btn"></label></td></tr>
+                    <tr onclick="onClick(4);"><td class="td_text">Sofőr Bajnokság</td><td><label><input type="radio" name="table" value="soforbajnoksag" class="radio_btn"></label></td></tr>
+                    <tr onclick="onClick(5);"><td class="td_text">Versenyez</td><td><label><input type="radio" name="table" value="versenyez" class="radio_btn"></label></td></tr>
+                </tbody>
+            </table>
             <div class="form_page_submit_btn"><button type="submit">Lekérdez</button></div>
         </form>
     </div>
